--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-My GitHub Page
+---
+layout: default
+---
+
+<p class="quiet">
+  This is the home of the book <em>Programming Scala</em>, published by <a href="http://oreilly.com/">O'Reilly Media</a>. The first edition will be available in October, 2009.
+</p>
+
+<p>
+  Until the print edition is available, there are two ways to read <em>Programming Scala</em>: as a <a href="http://oreilly.com/catalog/9780596157746/">Rough Cut</a> or <a href="http://programming-scala.labs.oreilly.com/">online</a> via an experimental offering from <a href="http://labs.oreilly.com/">O'Reilly Labs</a>. Both versions will be updated as the book is completed. Feedback is welcome and much appreciated.
+</p>
+
+<div id="buy"></div>
+<script src="http://catalog.oreilly.com/catalog/9780596155964/widgets/buy_buttons.js?id=buy"></script>
+
+<h3 class="prepend-top">About the book</h3>
+<p>
+  <em>Programming Scala</em> introduces an exciting new language that offers all the benefits of a modern object model, functional programming, and an advanced type system. Packed with code examples, this comprehensive book teaches you how to be productive with Scala quickly, and explains what makes this language ideal for today's highly scalable, component-based applications that support concurrency and distribution. You'll also learn the advantages that Scala offers as a language for the Java Virtual Machine.
+</p>
+
+<h3 class="prepend-top">About Scala</h3>
+<p>
+  <a href="http://www.scala-lang.org/">Scala</a> is a general purpose programming language designed to express common programming patterns in a concise, elegant, and type-safe way. It smoothly integrates features of object-oriented and functional languages. It is also fully interoperable with <a href="http://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>.
+</p>
+
+<h3 class="prepend-top">What's on the cover?</h3>
+<p>
+  It's a <a href="http://en.wikipedia.org/wiki/Tapir">tapir</a>, specifically a <a href="http://en.wikipedia.org/wiki/Malayan_Tapir">Malayan Tapir</a>. Tapirs look at first blush like a "hybrid" animal; a cross between a pig and a bear, perhaps. As Scala is a hybrid of object-oriented and functional programming, we think the tapir is a great mascot.
+</p>
