updated text to reflect book's release date and such

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <p class="quiet">
-  This is the home of the book <em>Programming Scala</em>, published by <a href="http://oreilly.com/">O'Reilly Media</a>. The first edition will be available in October, 2009.
+  This is the home of the book <em>Programming Scala</em> by <a href="http://deanwampler.com/">Dean Wampler</a> and <a href="http://al3x.net/">Alex Payne</a>, published by <a href="http://oreilly.com/">O'Reilly Media</a>. The first edition was printed in September, 2009.
 </p>
 
 <p>
-  Until the print edition is available, there are two ways to read <em>Programming Scala</em>: as a <a href="http://oreilly.com/catalog/9780596157746/">Rough Cut</a> or <a href="http://programming-scala.labs.oreilly.com/">online</a> via an experimental offering from <a href="http://labs.oreilly.com/">O'Reilly Labs</a>. Both versions will be updated as the book is completed. Feedback is welcome and much appreciated.
+  There are two ways to read <em>Programming Scala</em>: in <a href="http://oreilly.com/catalog/9780596155964">print</a> or <a href="http://programming-scala.labs.oreilly.com/">online</a> via a free experimental offering from <a href="http://labs.oreilly.com/">O'Reilly Labs</a>. The latter method allows you to leave comments for other readers and suggest improvements for future editions.
 </p>
 
 <div id="buy"></div>
@@ -21,6 +21,14 @@ layout: default
 <h3 class="prepend-top">About Scala</h3>
 <p>
   <a href="http://www.scala-lang.org/">Scala</a> is a general purpose programming language designed to express common programming patterns in a concise, elegant, and type-safe way. It smoothly integrates features of object-oriented and functional languages. It is also fully interoperable with <a href="http://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>.
+</p>
+
+<h3 class="prepend-top">About The Authors</h3>
+<p>
+  <a href="http://deanwampler.com/">Dean Wampler</a> is a consultant and trainer, specializing in Scala, Java, and Ruby. He works with clients on application design strategies that combine object-oriented programming, functional programming, and aspect-oriented programming. He also consults on Agile methods, like Lean and XP. Dean is a frequent speaker at industry and academic conferences on these topics. He has a Ph.D. in Physics from the University of Washington.
+</p>
+<p>
+ <a href="http://al3x.net/">Alex Payne</a> is an engineer at Twitter, a popular social messaging service. Alex has previously built web applications for political campaigns, non-profits, and early-stage startups, and supported information security efforts for military and intelligence customers. In his free time, Alex studies, speaks, and writes about the history, present use, and evolution of programming languages.
 </p>
 
 <h3 class="prepend-top">What's on the cover?</h3>
